remove the workaround for missing avoid break on super-narrow screens

--- a/skin/assets/styles/components/article/_article-vgde.scss
+++ b/skin/assets/styles/components/article/_article-vgde.scss
@@ -465,6 +465,7 @@ body.home, body.category {
         width: 100%;
         padding-top: 35px;
         border-top: $fdd-on-gray-color 1px solid;
+        min-height: unset;
         .article-grid-wrapper {
           display: flex;
           flex-wrap: wrap;
